samples/_failures_safe/1761250746_548604_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_615b529b.c: In function ‘main’:
./samples/SAFE/__tmp_615b529b.c:163:20: error: expected identifier or ‘(’ at end of input
  163 |             struct tm*
      |                    ^~
./samples/SAFE/__tmp_615b529b.c:163:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_615b529b.c:163:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_615b529b.c:163:20: error: expected declaration or statement at end of input
